@@ -1,5 +1,7 @@
 #!/usr/bin/env ruby
-# This command has been renamed "newrelic"
 # executes one of the commands in the new_relic/commands directory
 # pass the name of the command as an argument
-load File.dirname(__FILE__) + '/newrelic'
+
+$LOAD_PATH << File.expand_path(File.join(File.dirname(__FILE__), '..','lib'))
+require 'new_relic/command'
+NewRelic::Command.run
