@@ -1,0 +1,87 @@
+require 'optparse'
+
+# Run the command given by the first argument.  Right
+# now all we have is deployments. We hope to have other
+# kinds of events here later.
+
+module NewRelic
+  class Command
+    attr_accessor :leftover
+    # Capture a failure to execute the command.
+    # Ask it for a return status to exit the vm with,
+    # if appropriate.
+    class CommandFailure < StandardError
+      attr_reader :exit_code
+      def initialize message, return_status=nil
+        super message
+        @exit_code = return_status || 0
+      end
+    end
+    
+    def initialize(command_line_args)
+      if Hash === command_line_args
+        # command line args is an options hash
+        command_line_args.each do | key, value |
+          instance_variable_set "@#{key}", value.to_s if value
+        end
+      else
+        # parse command line args.  Throw an exception on a bad arg.
+        @leftover = options.parse(command_line_args)
+      end
+    rescue OptionParser::ParseError => e 
+      raise CommandFailure, e.message
+    end
+    
+    @commands = []
+    def self.inherited(subclass)
+      @commands << subclass
+    end
+
+    cmds = File.expand_path(File.join(File.dirname(__FILE__), 'commands', '*.rb'))
+    Dir[cmds].each{|command| require command }
+    
+    def self.run
+      
+      @command_names = @commands.map(&:command)
+      
+      extra = []
+      options = ARGV.options do |opts|
+        script_name = File.basename($0)
+        if script_name =~ /newrelic_cmd$/
+          $stdout.puts "warning: the 'newrelic_cmd' script has been renamed 'newrelic'"
+          script_name = 'newrelic'
+        end
+        opts.banner = "Usage: #{script_name} [ #{ @command_names.join(" | ")} ] [options]"
+        opts.separator "use '#{script_name} <command> -h' to see detailed command options"
+        opts
+      end
+      extra = options.order!
+      command = extra.shift
+      # just make it a little easier on them
+      command = 'deployments' if command =~ /deploy/
+      if command.nil?
+        STDERR.puts options
+      elsif !@command_names.include?(command)
+        STDERR.puts "Unrecognized command: #{command}"
+        STDERR.puts options
+      else
+        command_class = @commands.find{ |c| c.command == command} 
+        begin
+          command_class.new(extra).run
+        rescue NewRelic::Command::CommandFailure => failure
+          STDERR.puts failure.message
+          exit failure.exit_code
+        end
+      end
+      
+      def info message
+        STDOUT.puts message
+      end
+      
+      def err message
+        STDERR.puts message
+      end      
+    end
+  end
+  
+end
