@@ -2,19 +2,20 @@
 # This file configures the Rack NewRelic Metric Application.  Place a copy of this file
 # in the directory where you start the mongrel_rpm process.
 #
+# <%= generated_for_user %>
+#
 common: &default_settings
   log_level: info
   enabled: true
   
   # This is the key generated by script/create_admin
-  license_key: 'your_license_key_here'
+  license_key: '<%= license_key %>'
   
   # Replace this with the name of the application feeding
   # metrics into the Metric application;
   app_name: Application Monitor
     
-# If RAILS_ENV or RUBY_ENV is defined to be one of the following
-# these values will be overrides
+# Set RACK_ENV to one of the following:
 
 production:
   <<: *default_settings
